<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MeetApp</string>
    <string name="welcome_to">Welcome To</string>
    <string name="video_meeting_conference_app">Video Meeting | Conference App</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="your_example_com">your@example.com</string>
    <string name="password">Password</string>
    <string name="u2022_u2022_u2022_u2022_u2022_u2022_u2022">• • • • • • •</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Dont have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_need_a_few_details_to_get_you_account_ready">We need a few details to get you account ready</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>
    <string name="invitation_canceled">\"Invitation Canceled \"</string>
    <string name="invitation_rejected" tools:ignore="MissingTranslation">Invitation Rejected</string>
    <string name="unable_to_sign_in_out" tools:ignore="MissingTranslation">Unable to sign in out</string>
    <string name="is_not_available_for_meeting" tools:ignore="MissingTranslation">is not available for meeting</string>
    <string name="unable_to_send_token" tools:ignore="MissingTranslation">"Unable to send token"</string>
    <string name="no_users_available" tools:ignore="MissingTranslation">No users available</string>
    <string name="invitation_sent_successfully" tools:ignore="MissingTranslation">Invitation sent successfully</string>
    <string name="enter_email" tools:ignore="MissingTranslation">Enter email</string>
    <string name="enter_valid_email" tools:ignore="MissingTranslation">Enter valid email</string>
    <string name="enter_password" tools:ignore="MissingTranslation">Enter password</string>
    <string name="unable_to_sign_in" tools:ignore="MissingTranslation">Unable to sign in</string>

    <string name="error" tools:ignore="MissingTranslation">\"Error \"</string>
    <string name="enter_first_name" tools:ignore="MissingTranslation">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="password_and_confirm_password_must_be_same">Password and confirm password must be same</string>
    </resources>