<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_header"
            android:gravity="center"
            android:background="@color/purple_700"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">

            <TextView
                android:text="@string/welcome_to"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_16ssp"
                android:includeFontPadding="false"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/video_meeting_conference_app"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_16ssp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_sign_in_label"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:includeFontPadding="false"
            android:text="@string/sign_in_to_your_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sign_in"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/text_sign_in_label"
            app:cardCornerRadius="@dimen/_6sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_12ssp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/your_example_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_14ssp"
                    android:textColorHint="@color/colorHintText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"/>

                <TextView
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_12ssp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_14ssp"
                    android:textColorHint="@color/colorHintText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:background="@color/colorTextIcons"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/card_sign_in"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"/>

        <ProgressBar
            android:id="@+id/progress_bar_sign_in"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/button_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/button_sign_in"
            app:layout_constraintLeft_toLeftOf="@id/button_sign_in"
            app:layout_constraintRight_toRightOf="@id/button_sign_in"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"/>


        <TextView
            android:id="@+id/text_no_account"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/button_sign_in"
            android:text="@string/don_t_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:padding="@dimen/_8sdp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintTop_toBottomOf="@id/text_no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>