<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:background="@color/purple_700"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="@dimen/_8sdp"
        android:paddingLeft="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/image_back"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:fontFamily="@font/ubuntu_bold"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_16ssp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/we_need_a_few_details_to_get_you_account_ready"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_16ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/_6sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/first_name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_12ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edit_first_name"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/first_name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        android:textColorHint="@color/colorHintText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"/>

                    <TextView
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="Last Name"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_12ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edit_last_name"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/last_name"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        android:textColorHint="@color/colorHintText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"/>

                    <TextView
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/email"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_12ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/your_example_com"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        android:textColorHint="@color/colorHintText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"/>

                    <TextView
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_12ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        android:textColorHint="@color/colorHintText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"/>

                    <TextView
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:includeFontPadding="false"
                        android:text="@string/confirm_password"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_12ssp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/edit_confirm_password"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_marginRight="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:background="@null"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/u2022_u2022_u2022_u2022_u2022_u2022_u2022"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/_14ssp"
                        android:textColorHint="@color/colorHintText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sign_up"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:background="@color/colorTextIcons"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintTop_toBottomOf="@id/card_sign_in"
                    android:includeFontPadding="false"
                    android:text="@string/sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"/>

                <ProgressBar
                    android:id="@+id/progress_bar_sign_up"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"/>
            </FrameLayout>


            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_14ssp"
                android:text="@string/already_have_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/text_sign_in"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="@dimen/_8sdp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/_14ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>